@@ -4,6 +4,8 @@ django-registration-redux changelog
 
 Version 2.7, TBD
 ----------------
+* Feature: Use SHA256 instead of SHA1 for `activation_key` - `#362
+<https://github.com/macropin/django-registration/pull/362>_`
 
 Version 2.6, 10 April, 2019
 ----------------
@@ -11,8 +13,8 @@ Version 2.6, 10 April, 2019
 context. -
 `#350 <https://github.com/macropin/django-registration/pull/350>_`
 * Feature: Add testing for Django 2.2 and Python 3.7 (no code changes
-  required). - `#352
-  <https://github.com/macropin/django-registration/pull/352>_`
+required). - `#352
+<https://github.com/macropin/django-registration/pull/352>_`
 * Bugfix: Send emails on commit `#355
 <https://github.com/macropin/django-registration/pull/355>_`
 
